# rosalind

./: Cargo.toml  README.org
data/: rosalind_dna.txt  rosalind_gc.txt  rosalind_hamm.txt  rosalind_revc.txt  rosalind_rna.txt
src/: dna.rs  fib.rs  gc.rs  hamm.rs  iprb.rs  prot.rs  revc.rs  rna.rs
