[package]
name = "rosalind-rs"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "dna"
path = "src/dna.rs"

[[bin]]
name = "rna"
path = "src/rna.rs"

[[bin]]
name = "revc"
path = "src/revc.rs"

[[bin]]
name = "gc"
path = "src/gc.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "hamm"
path = "src/hamm.rs"

[[bin]]
name = "iprb"
path = "src/iprb.rs"
